Revision history for Perl module Nagios::Plugin.

0.13  ???
  - Lots of extra tests and fixes from Nathan Vonnahme

0.12  15th June 2006
  - rrdlabel method available to get a performance label, 
	converted to something rrd can use
  - fixes to parse_perfstring routine if values are 0
  - is_set method for range object to see if warning/critical range is set

0.11  14th June 2006
  - Interface changed for parse_perfstring, returning empty 
	array if not parseable
  - Fixed problem when parsing nagiosgraph data (linefeed at end 
	of perfdata)

0.10  8th June 2006
	First release to CPAN

0.01  Fri Jun  2 14:10:58 2006
	- original version; created by h2xs 1.23 with options
		-X -n Nagios::Plugin
