@@ -4,7 +4,7 @@ use ExtUtils::MakeMaker;
 # the contents of the Makefile that is written.
 WriteMakefile(
     NAME              => 'Nagios::Plugin',
-    VERSION_FROM      => 'lib/Nagios/Plugin.pm', # finds $VERSION
+    VERSION_FROM      => 'lib/Nagios/Plugin/Base.pm', # finds $VERSION
     PREREQ_PM         => {}, # e.g., Module::Name => 1.1
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM  => 'lib/Nagios/Plugin.pm', # retrieve abstract from module
