@@ -2,6 +2,7 @@ Revision history for Perl module Nagios::Plugin.
 
 0.13  ???
   - Lots of extra tests and fixes from Nathan Vonnahme
+  - Nagios::Plugin::Getopt added by Gavin Carr
 
 0.12  15th June 2006
   - rrdlabel method available to get a performance label, 
